Added /ticketify before all the routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thirunaa.github.io/ticketify/",
+  "homepage": "https://thirunaa.github.io/ticketify",
   "name": "ticketify",
   "version": "0.1.0",
   "private": true,
